# io_blair

./: README.md
.github/workflows/: backend_tests.yml  deploy_client.yml
backend/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  compose.yml  docker-stack.yml
backend/cmake/: SetupDependencies.cmake
backend/docker/: app.Dockerfile  test.Dockerfile
backend/docs/: CMakeLists.txt
backend/src/: CMakeLists.txt  character.hpp  context.cpp  context.hpp  game.cpp  game.hpp  handler.cpp  handler.hpp  json.cpp  json.hpp  lobby.cpp  lobby.hpp  lobby_manager.cpp  lobby_manager.hpp  main.cpp  maze.cpp  maze.hpp  net_common.hpp  request.hpp  response.cpp  response.hpp  server.cpp  server.hpp  session.cpp  session.hpp  session_mock.hpp  string_hash.cpp  string_hash.hpp
backend/src/handler/: handler.cpp  handler.hpp  igame.cpp  igame.hpp  ihandler.cpp  ihandler.hpp  ilobby.cpp  ilobby.hpp
backend/src/lobby/: ilobby_controller.hpp  ilobby_manager.hpp  isession_controller.hpp  lobby_context.cpp  lobby_context.hpp  lobby_controller.cpp  lobby_controller.hpp  lobby_data.cpp  lobby_data.hpp  lobby_manager.cpp  lobby_manager.hpp  player.cpp  player.hpp  session_controller.cpp  session_controller.hpp
backend/src/session/: event.hpp  isession.hpp  session.cpp  session.hpp  session_context.cpp  session_context.hpp  session_view.cpp  session_view.hpp
backend/tests/: CMakeLists.txt  decoder_test.cpp  example_test.cpp  game_test.cpp  json_test.cpp  lobby_controller_test.cpp  lobby_data_test.cpp  lobby_test.cpp  matcher.hpp  maze_test.cpp  prelobby_test.cpp  response_test.cpp  session_view_test.cpp
backend/tests/mock/: mock_game.hpp  mock_handler.hpp  mock_lobby_manager.hpp  mock_session.hpp
backend/tests/mocks/: lobby_mock.hpp  session_mock.hpp
frontend/: .env.production  eslint.config.js  eslint.config.mts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/models/CatWaffle/: scene.gltf
frontend/src/: env.d.ts  vite-env.d.ts
frontend/src/app/: App.tsx  index.css
frontend/src/components/: CharacterCard.tsx  CharacterSelect.tsx  Chat.tsx  Client.tsx  Game.tsx  GameState.tsx  Loading.tsx  Lobby.tsx  Map.tsx  Player.tsx  Pregame.tsx  Prelobby.tsx  Scene.astro  SessionProvider.tsx  Sound.tsx  State.tsx  Test.astro
frontend/src/components/InGame/: InGame.tsx  Map.tsx  Player.tsx
frontend/src/components/InGame/Player/: Character.tsx  Player.tsx  Teammate.tsx  You.tsx
frontend/src/components/Lobby/: CatWaffle.tsx  CharacterCard.tsx  CharacterSelect.tsx  Lobby.tsx
frontend/src/components/game/: Game.tsx
frontend/src/components/game/components/: InGame.tsx  Lobby.tsx  Map.tsx  Player.tsx  Prelobby.tsx
frontend/src/components/game/hooks/: useConnection.tsx  useSession.tsx  useSocket.tsx
frontend/src/components/game/lib/: EventListener.ts  GameConnection.ts  QueuedSocket.ts
frontend/src/components/providers/: ConnectionProvider.tsx  GameProvider.tsx
frontend/src/hooks/: useBody.tsx  useConnection.tsx  useDynamicScale.tsx  useGame.tsx  usePlayers.tsx  usePrelobbyStatus.tsx  useSession.tsx  useSpringBodySync.tsx
frontend/src/lib/: EventListener.ts  GameConnection.ts  Map.ts  Maze.ts  QueuedSocket.ts  game.ts  sounds.ts
frontend/src/pages/: index.astro
frontend/src/scripts/: Game.ts
frontend/src/types/: character.ts  tuple.ts
